# 2D_Game_Programming

./: readme.md
2D_camera_with_two_players/: CMakeLists.txt  level_map.txt  main.cpp  readme.md
2D_camera_with_two_players/cmake/: FindSDL2_ttf.cmake
2D_collisions_and_bouncing/: main.cpp  readme.md
Jumping_playground/: jump_map.txt  main.cpp  readme.md
Level_map_loading_from_txt_file/: level_map.txt  main.cpp  readme.md
Paralax/: main.cpp  paralax-1.txt  paralax1.txt  paralax2.txt  paralax3.txt  readme.md
Simple_game_-_a_race_for_the_star/: level_map_1.txt  level_map_2.txt  level_map_3.txt  main.cpp  readme.md
